objects/FLODocs__FLO_Change_Approval_Policy__c.object
<CustomObject>
    <fields>
        <fullName>FLODocs__Scripted_Object_Control__c</fullName>
        <description>This field sets the level of change control required for any changes to ApexClass, ApexComponent or any object referred to in a script/code.</description>
        <inlineHelpText>This field sets the level of change control required for any changes to ApexClass, ApexComponent or any object referred to in a script/code.</inlineHelpText>
        <label>Code Changes</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Log Changes Only</fullName>
                    <default>true</default>
                    <label>Log Changes Only</label>
                </value>
                <value>
                    <fullName>Process Issue Only</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Sandbox Development &amp; Testing</fullName>
                </value>
                <value>
                    <fullName>Full Software Development Lifecycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Scripted_Objects_Changes__c</fullName>
        <description>This is the change request level defined for any changes to scripts, workflows or any object referred to in a script or workflow.</description>
        <inlineHelpText>This field sets the level of change control required for any changes to scripts, workflows or any object referred to in a script or workflow.</inlineHelpText>
        <label>Scripted Objects Changes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__FLO_Change_Control_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Search_and_Report_Changes__c</fullName>
        <description>This is the level of change control required  for changes to any search or report not used in a script or workflow and not used as a control.</description>
        <inlineHelpText>This is the level of change control required  for changes to any search or report not used in a script or workflow and not used as a control.</inlineHelpText>
        <label>Report and List View Changes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__FLO_Change_Control_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Sequential_Approval_Requests__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines whether approval requests are sent one at a time or all at once.  If checked, they go out one at a time in the order:  first approver, process approvers (by process id), impacted process approvers (by id), customization approvers (by id), impacted customization approvers (by id), executive approver, last approver.  Approvals stop when all approvals received  or rejection is received.</description>
        <inlineHelpText>This field determines whether approval requests are sent one at a time or all at once.</inlineHelpText>
        <label>Sequential Approval Requests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Sharing_Control__c</fullName>
        <description>This is the level of control required for changes to Sharing objects</description>
        <inlineHelpText>This is the level of control required for changes to Sharing objects</inlineHelpText>
        <label>Sharing Changes</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Log Changes Only</fullName>
                    <default>true</default>
                    <label>Log Changes Only</label>
                </value>
                <value>
                    <fullName>Process Issue Only</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Sandbox Development &amp; Testing</fullName>
                </value>
                <value>
                    <fullName>Full Software Development Lifecycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Subsidiary__c</fullName>
        <description>Coma separated list with the internal ids of the subsidiaries where this policy apply</description>
        <inlineHelpText>Coma separated list with the internal id of the subsidiary where this policy apply</inlineHelpText>
        <label>Subsidiary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Templates_Control__c</fullName>
        <description>This is the level of control required for changes to Templates and letterheads</description>
        <inlineHelpText>This is the level of control required for changes to Templates and Letterheads</inlineHelpText>
        <label>Template Changes</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Log Changes Only</fullName>
                    <default>true</default>
                    <label>Log Changes Only</label>
                </value>
                <value>
                    <fullName>Process Issue Only</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Sandbox Development &amp; Testing</fullName>
                </value>
                <value>
                    <fullName>Full Software Development Lifecycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Territories_Control__c</fullName>
        <description>This is the level of control required for changes to objects affecting Territories</description>
        <inlineHelpText>This is the level of control required for changes to objects affecting Territories</inlineHelpText>
        <label>Territories Changes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Log Changes Only</fullName>
                </value>
                <value>
                    <fullName>Process Issue Only</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Sandbox Development &amp; Testing</fullName>
                </value>
                <value>
                    <fullName>Full Software Development Lifecycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Title__c</fullName>
        <description>This is the Title of the Executive Approver (Management)</description>
        <formula>FLODocs__Executive_Approver__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Title of the Executive Approver (Management)</inlineHelpText>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Update_Child_Policies__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field governs whether any changes to the  specified IT and Management approvers are passed to  child policies.</description>
        <inlineHelpText>Set this field to update specified IT and Management approvers on Child Policies.</inlineHelpText>
        <label>Update Child Policies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__User_Role_Profile_Changes__c</fullName>
        <description>Changes of the user profile - When the user has changed the profile FLODocs will create a Change Log</description>
        <inlineHelpText>Changes of the user profile - When the user has changed the profile FLODocs will create a Change Log</inlineHelpText>
        <label>User Role and Profile Changes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__FLO_Change_Control_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Web_Related_Changes__c</fullName>
        <description>This is the level of control required for changes to objects affecting web objects (eg CustomSite, Network (Communities), etc)</description>
        <inlineHelpText>This is the level of control required for changes to objects affecting web objects (eg CustomSite, Network (Communities), etc)</inlineHelpText>
        <label>Web-Related Changes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__FLO_Change_Control_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Wizard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wizard</label>
        <type>Checkbox</type>
    </fields>
    <label>Change / Approval Policy</label>
    <listViews>
        <fullName>FLODocs__All_Policies_v3</fullName>
        <columns>NAME</columns>
        <columns>FLODocs__Default_Policy__c</columns>
        <columns>FLODocs__Executive_Approver__c</columns>
        <columns>FLODocs__Final_Approver__c</columns>
        <columns>FLODocs__Control_Changes__c</columns>
        <columns>FLODocs__Scripted_Object_Control__c</columns>
        <columns>FLODocs__General_Settings_Control__c</columns>
        <columns>FLODocs__Data_Quality_Control__c</columns>
        <columns>FLODocs__Data_Control__c</columns>
        <columns>FLODocs__Applications_Control__c</columns>
        <columns>FLODocs__Templates_Control__c</columns>
        <columns>FLODocs__Labels_and_Translations_Control__c</columns>
        <columns>FLODocs__Layout_and_Record_Types_Control__c</columns>
        <columns>FLODocs__Reports_Dashboards_ListViews_Control__c</columns>
        <columns>FLODocs__Flow_Process_Builder_Workflow_Control__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Policies (v3)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FLODocs__All_Policies_v4</fullName>
        <columns>NAME</columns>
        <columns>FLODocs__Default_Policy__c</columns>
        <columns>FLODocs__Preliminary_Approvers__c</columns>
        <columns>FLODocs__Final_Approver__c</columns>
        <columns>FLODocs__Executive_Approver__c</columns>
        <columns>FLODocs__Control_Changes__c</columns>
        <columns>FLODocs__Scripted_Object_Control__c</columns>
        <columns>FLODocs__Data_Control__c</columns>
        <columns>FLODocs__Flow_Process_Builder_Workflow_Control__c</columns>
        <columns>FLODocs__Applications_Control__c</columns>
        <columns>FLODocs__Templates_Control__c</columns>
        <columns>FLODocs__Labels_and_Translations_Control__c</columns>
        <columns>FLODocs__Layout_and_Record_Types_Control__c</columns>
        <columns>FLODocs__Reports_Dashboards_ListViews_Control__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Policies (v4)</label>
    </listViews>
    <nameField>
        <label>Change / Approval Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Changes / Approval Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>